# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("perf") {
  testonly = true
  deps = [
    "//tools/perf/chrome_telemetry_build:telemetry_chrome_test",
  ]

  data = [
    "//tools/perf/",

    # Field trial config
    "//tools/variations/",
    "//testing/variations/",

    # For blink_perf benchmarks.
    "//third_party/WebKit/PerformanceTests/",

    # For blink_perf.BlinkPerfPywebsocket benchmark.
    "//third_party/pywebsocket/",
  ]
}

if (is_android) {
  import("//build/config/android/rules.gni")

  wrapper_script("run_benchmark_wrapper") {
    target = "run_benchmark"
    flag_name = "--chromium-output-directory"
  }
}
