# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")

valgrind_dependencies = [
  "asan/asan_symbolize.py",
  "asan/third_party/__init__.py",
  "asan/third_party/asan_symbolize.py",
  "browser_wrapper_win.py",
  "chrome_tests.bat",
  "chrome_tests.py",
  "chrome_tests.sh",
  "common.py",
  "drmemory.bat",
  "drmemory_analyze.py",
  "fixed_suppressions.sh",
  "gdb_helper.py",
  "locate_valgrind.sh",
  "memcheck/suppressions.txt",
  "memcheck/suppressions_linux.txt",
  "memcheck_analyze.py",
  "regrind.sh",
  "scan-build.py",
  "suppressions.py",
  "test_suppressions.py",
  "unused_suppressions.py",
  "valgrind.sh",
  "valgrind_test.py",
  "waterfall.sh",
]

if (build_with_chromium) {
  valgrind_dependencies += [
    "gtest_exclude/ash_unittests.gtest-memcheck.txt",
    "gtest_exclude/aura_unittests.gtest.txt",
    "gtest_exclude/base_unittests.gtest.txt",
    "gtest_exclude/base_unittests.gtest_win-8.txt",
    "gtest_exclude/base_unittests.gtest_win32.txt",
    "gtest_exclude/blink_platform_unittests.gtest_win32.txt",
    "gtest_exclude/browser_tests.gtest-memcheck.txt",
    "gtest_exclude/chromeos_unittests.gtest.txt",
    "gtest_exclude/components_unittests.gtest.txt",
    "gtest_exclude/content_unittests.gtest.txt",
    "gtest_exclude/extensions_unittests.gtest-memcheck.txt",
    "gtest_exclude/interactive_ui_tests.gtest.txt",
    "gtest_exclude/ipc_tests.gtest.txt",
    "gtest_exclude/media_unittests.gtest.txt",
    "gtest_exclude/message_center_unittests.gtest.txt",
    "gtest_exclude/net_unittests.gtest-memcheck.txt",
    "gtest_exclude/net_unittests.gtest.txt",
    "gtest_exclude/net_unittests.gtest_linux.txt",
    "gtest_exclude/remoting_unittests.gtest_win-8.txt",
    "gtest_exclude/sandbox_linux_unittests.gtest.txt",
    "gtest_exclude/suppressions.txt",
    "gtest_exclude/sync_unit_tests.gtest-asan.txt",
    "gtest_exclude/ui_base_unittests.gtest-memcheck.txt",
    "gtest_exclude/ui_unittests.gtest-memcheck_linux.txt",
    "gtest_exclude/unit_tests.gtest-memcheck.txt",
    "gtest_exclude/unit_tests.gtest.txt",
    "gtest_exclude/unit_tests.gtest_linux.txt",
  ]
}
