# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_android)

import("//build/config/android/rules.gni")

# GYP: //testing/android/junit_test.gyp:junit_test_support
java_library("junit_test_support") {
  testonly = true
  java_files = [
    "java/src/org/chromium/testing/local/BackgroundShadowAsyncTask.java",
    "java/src/org/chromium/testing/local/CustomShadowAsyncTask.java",
    "java/src/org/chromium/testing/local/GtestComputer.java",
    "java/src/org/chromium/testing/local/GtestFilter.java",
    "java/src/org/chromium/testing/local/GtestListener.java",
    "java/src/org/chromium/testing/local/GtestLogger.java",
    "java/src/org/chromium/testing/local/JsonListener.java",
    "java/src/org/chromium/testing/local/JsonLogger.java",
    "java/src/org/chromium/testing/local/JunitTestArgParser.java",
    "java/src/org/chromium/testing/local/JunitTestMain.java",
    "java/src/org/chromium/testing/local/LocalRobolectricTestRunner.java",
    "java/src/org/chromium/testing/local/PackageFilter.java",
    "java/src/org/chromium/testing/local/RunnerFilter.java",
  ]
  deps = [
    "//third_party/junit",
    "//third_party/mockito:mockito_java",
    "//third_party/robolectric:android-all-5.0.0_r2-robolectric-1",
    "//third_party/robolectric:robolectric_annotations_java",
    "//third_party/robolectric:robolectric_java",
    "//third_party/robolectric:robolectric_resources_java",
    "//third_party/robolectric:robolectric_utils_java",
    "//third_party/robolectric:shadows-core-3.0-21",
    "//third_party/robolectric:shadows-multidex-3.0",
  ]
}

# GYP: //testing/android/junit_test.gyp:junit_unit_tests
junit_binary("junit_unit_tests") {
  java_files = [
    "javatests/src/org/chromium/testing/local/GtestFilterTest.java",
    "javatests/src/org/chromium/testing/local/GtestLoggerTest.java",
    "javatests/src/org/chromium/testing/local/PackageFilterTest.java",
    "javatests/src/org/chromium/testing/local/RunnerFilterTest.java",
  ]
}
