# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_apk("customtabs_benchmark_apk") {
  java_files = [ "java/src/org/chromium/customtabs/test/MainActivity.java" ]
  android_manifest = "java/AndroidManifest.xml"
  apk_name = "CustomTabsBenchmark"
  deps = [
    "//third_party/custom_tabs_client:custom_tabs_support_java",
  ]
}
